fix issues #207